--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "npm run build:css && remix build",
+    "build": "npm run build:css && yarn typecheck && remix build ",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "^1.4.3",
