--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
