--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
+    "@sendgrid/mail": "^7.6.2",
     "@vercel/node": "^1.14.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
