--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/node": "^1.14.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
+    "just-debounce": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
