--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "just-debounce": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
