--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "just-debounce": "^1.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@remix-run/serve": "^1.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.0",
     "eslint": "^8.16.0",
