--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-suspense-img": "^0.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
