--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "isolatedModules": true,
     "esModuleInterop": true,
+    "module": "esnext", // allow lazy imports
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "resolveJsonModule": true,
