--- a/package.json
+++ b/package.json
@@ -12,36 +12,39 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
-    "@elgorditosalsero/react-gtm-hook": "^2.4.0",
-    "@remix-run/node": "^1.5.1",
-    "@remix-run/react": "^1.5.1",
-    "@remix-run/vercel": "^1.5.1",
+    "@elgorditosalsero/react-gtm-hook": "^2.6.0",
+    "@remix-run/node": "^1.7.2",
+    "@remix-run/react": "^1.7.2",
+    "@remix-run/vercel": "^1.7.2",
     "@sendgrid/mail": "^7.7.0",
-    "@vercel/node": "^1.15.3",
-    "classnames": "^2.3.1",
-    "dotenv": "^16.0.1",
+    "@vercel/node": "^2.5.22",
+    "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "just-debounce": "^1.1.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-suspense-img": "^0.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.5.1",
-    "@remix-run/eslint-config": "^1.5.1",
-    "@remix-run/serve": "^1.5.1",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@remix-run/dev": "^1.7.2",
+    "@remix-run/eslint-config": "^1.7.2",
+    "@remix-run/serve": "^1.7.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
-    "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.0",
-    "eslint": "^8.16.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.5.5"
+    "autoprefixer": "^10.4.12",
+    "concurrently": "^7.4.0",
+    "eslint": "^8.25.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.21"
   }
 }
