--- a/package.json
+++ b/package.json
@@ -1,50 +1,70 @@
 {
-  "name": "remix-template-vercel",
-  "private": true,
-  "description": "",
-  "license": "",
-  "sideEffects": false,
-  "scripts": {
-    "build": "npm run build:css && yarn typecheck && remix build ",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "typecheck": "tsc -b"
-  },
-  "dependencies": {
-    "@elgorditosalsero/react-gtm-hook": "^2.6.0",
-    "@remix-run/node": "^1.7.2",
-    "@remix-run/react": "^1.7.2",
-    "@remix-run/vercel": "^1.7.2",
-    "@sendgrid/mail": "^7.7.0",
-    "@vercel/node": "^2.5.22",
-    "classnames": "^2.3.2",
-    "dotenv": "^16.0.3",
-    "just-debounce": "^1.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
-    "react-suspense-img": "^0.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^1.7.2",
-    "@remix-run/eslint-config": "^1.7.2",
-    "@remix-run/serve": "^1.7.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-helmet": "^6.1.5",
-    "autoprefixer": "^10.4.12",
-    "concurrently": "^7.4.0",
-    "eslint": "^8.25.0",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4"
-  },
-  "engines": {
-    "node": ">=16"
-  },
-  "resolutions": {
-    "@types/react": "^18.0.21"
-  }
+	"name": "haach portfolio",
+	"version": "2.0.0",
+	"description": "Hanna Achenbach portfolio",
+	"type": "module",
+	
+	"license": "MIT",
+	
+	"scripts": {
+		"start": "remix dev",
+		"build": "remix build",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
+		"typecheck": "tsc",
+		"test": "vitest --coverage",
+		"test:watch": "vitest --coverage --watch",
+		"contributors": "all-contributors generate",
+		"new": "plop"
+	},
+	"dependencies": {
+		"@elgorditosalsero/react-gtm-hook": "^2.7.2",
+		"@remix-run/node": "^2.2.0",
+		"@remix-run/react": "^2.2.0",
+		"@remix-run/vercel": "^1.19.3",
+		"@sendgrid/mail": "^8.1.1",
+		"@types/react-helmet": "^6.1.11",
+		"@vercel/node": "^3.0.9",
+		"classnames": "^2.5.1",
+		"dotenv": "^16.4.5",
+		"isbot": "^4.1.1",
+		"just-debounce": "^1.1.0",
+		"prettier": "^3.2.5",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-icons": "^5.0.1",
+		"react-suspense-img": "^0.2.0"
+	},
+	"devDependencies": {
+		"@remix-run/dev": "^2.2.0",
+		"@remix-run/eslint-config": "^2.2.0",
+		"@remix-run/serve": "^2.2.0",
+		"@testing-library/jest-dom": "^6.1.4",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/react": "^18.0.15",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^4.0.1",
+		"@vitest/coverage-v8": "^1.1.0",
+		"all-contributors-cli": "^6.20.0",
+		"autoprefixer": "^10.4.8",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"jsdom": "^24.0.0",
+		"postcss": "^8.4.16",
+		"prettier-plugin-tailwindcss": "^0.5.7",
+		"tailwindcss": "^3.1.8",
+		"typescript": "^5.0.4",
+		"vite-tsconfig-paths": "^4.0.5",
+		"vitest": "^1.1.0"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"sideEffects": false
 }
